--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,8 @@ envlist = py26,py27,py32,py33,py34,cover
 [testenv]
 deps =
     pytest
-
 commands =
     python setup.py test
-#    py.test pyramid_logger/tests.py
 
 [testenv:cover]
 basepython =
@@ -18,8 +16,8 @@ deps =
     pytest-cov
 commands =
     coverage erase
-    py.test --cov=pyramid_logger --cov-report=term-missing --no-cov-on-fail \
-        pyramid_logger/tests.py
+    py.test --cov=pyramid_log --cov-report=term-missing --no-cov-on-fail \
+        pyramid_log/tests.py
     coverage html --fail-under=100
 
 [pytest]
