Show coverage on Jenkins

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,4 @@
 [tox]
-minversion = 1.4
 envlist = py26,py27,py32,py33,py34,cover
 
 [testenv]
@@ -15,9 +14,8 @@ deps =
     {[testenv]deps}
     pytest-cov
 commands =
-    coverage erase
-    py.test --cov=pyramid_log --cov-report=term-missing --no-cov-on-fail \
-        pyramid_log/tests.py
+    python setup.py test \
+        -a "--cov=pyramid_log --cov-report=term-missing --no-cov-on-fail"
     coverage html --fail-under=100
 
 [pytest]
