--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: python
 python:
-    - 2.6
-    - 2.7
-    - 3.2
-    - 3.3
-    - 3.4
-    - pypy
-    - pypy3
-install: pip install .
-script: python setup.py test
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  - pypy
+  - pypy3
+install:
+  - pip install . pytest-cov
+script:
+  - python setup.py test -a "--cov=pyramid_log --cov-report=term-missing"
