--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - pypy
-  - pypy3
+# We don't need sudo... this might speed up builds
+sudo: false
+env:
+  - TOXENV=py26
+  - TOXENV=py27
+  - TOXENV=py32
+  - TOXENV=py33
+  - TOXENV=py34
+  - TOXENV=pypy
+  - TOXENV=pypy3
+  - TOXENV=cover
 install:
-  - pip install . pytest-cov
+  - pip install tox
 script:
-  - python setup.py test -a "--cov=pyramid_log --cov-report=term-missing"
+  - tox
