--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ env:
   - TOXENV=pypy3
   - TOXENV=cover
 install:
-  - pip install tox
+  - travis_retry pip install tox
 script:
-  - tox
+  - travis_retry tox
