--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,26 @@
 language: python
 # We don't need sudo... this might speed up builds
 sudo: false
-env:
-  - TOXENV=py26
-  - TOXENV=py27
-  - TOXENV=py33
-  - TOXENV=py34
-  - TOXENV=py35
-  - TOXENV=pypy
-  - TOXENV=pypy3
-  - TOXENV=cover
+
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py26
+    - python: 2.7
+      env: TOXENV=py27
+    - python: 3.3
+      env: TOXENV=py33
+    - python: 3.4
+      env: TOXENV=py34
+    - python: 3.5
+      env: TOXENV=py35
+    - python: pypy
+      env: TOXENV=pypy
+    - python: pypy3
+      env: TOXENV=pypy3
+    - python: 2.7
+      env: TOXENV=cover
+
 install:
   - travis_retry pip install tox
 script:
