Use pytest-runner to implement setup.py test

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py26,py27,py33,py34,py35,pypy,pypy3,cover
 deps =
     pytest
 commands =
-    python setup.py test
+    pytest
 
 [testenv:cover]
 basepython =
@@ -14,9 +14,11 @@ deps =
     {[testenv]deps}
     pytest-cov
 commands =
-    python setup.py test \
-        -a "--cov=pyramid_log --cov-report=term-missing --no-cov-on-fail"
-    coverage html --fail-under=100
+    pytest \
+        --cov=pyramid_log \
+        --cov-report=term-missing \
+        --cov-report=html \
+        --cov-fail-under=100
 
 [pytest]
 python_files = tests.py
