Create a tox -e lint target

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,18 @@ commands =
         --cov-report=html \
         --cov-fail-under=100
 
+[testenv:lint]
+skip_install = True
+basepython = python3.5
+deps =
+    flake8
+    readme_renderer
+    check-manifest
+commands =
+    flake8 pyramid_log
+    python setup.py check -r -s -m
+    check-manifest
+
 [pytest]
 python_files = tests.py
 norecursedirs = .tox build
