Support python>=3.8 and Pyramid>=2.
This work is based on PR #2 by Nathan Merritt.  Thank you Nathan!

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,23 @@
 [tox]
-envlist = py27,py34,py35,py36,pypy,cover,lint
+minversion = 3.15.0
+envlist =
+    {py27,py39}-pyramid1
+    py36,py37,py38,py39,py310
+    pypy3
+    cover
+    lint
 
 [testenv]
 deps =
     pytest
+    pyramid1: pyramid==1.*
+
 commands =
     pytest
 
 [testenv:cover]
 basepython =
-    python2.7
+    python3.9
 deps =
     {[testenv]deps}
     pytest-cov
@@ -22,7 +30,7 @@ commands =
 
 [testenv:lint]
 skip_install = True
-basepython = python3.5
+basepython = python3.9
 deps =
     flake8
     readme_renderer
@@ -33,5 +41,5 @@ commands =
     check-manifest
 
 [pytest]
-python_files = tests.py
+python_files = test*.py
 norecursedirs = .tox build
