PEP517-ize the packaging

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 minversion = 3.15.0
+isolated_build = True
 envlist =
     {py27,py39}-pyramid1
     py36,py37,py38,py39,py310
@@ -32,12 +33,14 @@ commands =
 skip_install = True
 basepython = python3.9
 deps =
+    build
     flake8
-    readme_renderer
+    twine
     check-manifest
 commands =
+    python -m build --sdist --outdir {envtmpdir}/dist {toxinidir}
+    twine check {envtmpdir}/dist/*
     flake8 pyramid_log
-    python setup.py check -r -s -m
     check-manifest
 
 [pytest]
