--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,16 @@ envlist =
     cover
     lint
 
+[gh-actions]
+python =
+    2.7: py27-pyramid1
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39, py39-pyramid1, cover, lint
+    3.10: py310
+    pypy-3: pypy3
+
 [testenv]
 deps =
     pytest
