Cleanup tox-gh-actions configuration

--- a/tox.ini
+++ b/tox.ini
@@ -10,11 +10,11 @@ envlist =
 
 [gh-actions]
 python =
-    2.7: py27-pyramid1
+    2.7: py27
     3.6: py36
     3.7: py37
     3.8: py38
-    3.9: py39, py39-pyramid1, cover, lint
+    3.9: py39, cover, lint
     3.10: py310
     pypy-3: pypy3
 
