Combine coverage from all environments

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 minversion = 3.15.0
 isolated_build = True
 envlist =
-    {py27,py39}-pyramid1
-    py36,py37,py38,py39,py310
+    py{27,36,37,38,39,310}
+    py39-pyramid1
     pypy3
-    cover
+    clean,cover
     lint
 
 [gh-actions]
@@ -14,41 +14,49 @@ python =
     3.6: py36
     3.7: py37
     3.8: py38
-    3.9: py39, cover, lint
+    3.9: py39
     3.10: py310
     pypy-3: pypy3
 
 [testenv]
 deps =
     pytest
+    pytest-cov
     pyramid1: pyramid==1.*
-
+depends = clean
 commands =
-    pytest
+    pytest --cov=pyramid_log --cov-append --cov-report=term-missing
+
+[testenv:clean]
+deps = coverage[toml]
+skip_install = true
+depends =
+commands = coverage erase
 
 [testenv:cover]
-basepython =
-    python3.9
-deps =
-    {[testenv]deps}
-    pytest-cov
+deps = coverage[toml]
+skip_install = true
+depends =
+    py{,27,36,37,38,39,310,py3}{,-pyramid1}
 commands =
-    pytest \
-        --cov=pyramid_log \
-        --cov-report=term-missing \
-        --cov-report=html \
-        --cov-fail-under=100
+    coverage html
+    coverage report --fail-under=100 --show-missing
 
 [testenv:lint]
-skip_install = True
-basepython = python3.9
+skip_install = true
 deps =
     build
     flake8
     twine
     check-manifest
+depends =
 commands =
     python -m build --sdist --outdir {envtmpdir}/dist {toxinidir}
     twine check {envtmpdir}/dist/*
     flake8 pyramid_log
     check-manifest
+
+[pytest]
+# NB: Pytest under python 2.7 does not appear to support config in pyproject.toml
+python_files = test*.py
+norecursedirs = .tox build
