Update coverage test in tests workflow
Save HTML coverage report as workflow artifact.

--- a/tox.ini
+++ b/tox.ini
@@ -21,24 +21,23 @@ python =
 [testenv]
 deps =
     pytest
-    pytest-cov
+    coverage[toml]
     pyramid1: pyramid==1.*
-depends = clean
-commands =
-    pytest --cov=pyramid_log --cov-append --cov-report=term-missing
+depends =
+    py{,27,36,37,38,39,310,py3}{,-pyramid1}: clean
+    cover: py{,27,36,37,38,39,310,py3}{,-pyramid1}
+commands = coverage run -m pytest
 
 [testenv:clean]
 deps = coverage[toml]
 skip_install = true
-depends =
 commands = coverage erase
 
 [testenv:cover]
 deps = coverage[toml]
 skip_install = true
-depends =
-    py{,27,36,37,38,39,310,py3}{,-pyramid1}
 commands =
+    -coverage combine --append
     coverage html
     coverage report --fail-under=100 --show-missing
 
@@ -49,7 +48,6 @@ deps =
     flake8
     twine
     check-manifest
-depends =
 commands =
     python -m build --sdist --outdir {envtmpdir}/dist {toxinidir}
     twine check {envtmpdir}/dist/*
