--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ on:
   - pull_request
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -33,8 +33,14 @@ jobs:
         pip install tox tox-gh-actions
     - name: Test with tox
       run: tox
+    - uses: actions/upload-artifact@v2
+      with:
+        name: coverage-data
+        path: .coverage.*
 
   coverage:
+    needs: tests
+    if: always()
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -42,10 +48,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox
-    - name: Run tests
-      run: tox -p -q -e clean,py27,py
+    - uses: actions/download-artifact@v2
+      with:
+        name: coverage-data
     - name: Test coverage
       run: tox -e cover
+    - uses: actions/upload-artifact@v2
+      with:
+        name: htmlcov
+        path: htmlcov
 
   lint:
     runs-on: ubuntu-latest
