--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-minversion = 3.15.0
+minversion = 4
 isolated_build = True
 envlist =
-    py{36,37,38,39,310}
+    py{37,38,39,310,311}
     py39-pyramid1
     pypy3
     clean,cover
@@ -10,11 +10,11 @@ envlist =
 
 [gh-actions]
 python =
-    3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
     pypy-3: pypy3
 
 [testenv]
@@ -23,8 +23,8 @@ deps =
     coverage[toml]
     pyramid1: pyramid==1.*
 depends =
-    py{,36,37,38,39,310,py3}{,-pyramid1}: clean
-    cover: py{,36,37,38,39,310,py3}{,-pyramid1}
+    py{,36,37,38,39,310,311,py3}: clean
+    cover: py{,36,37,38,39,310,311,py3}{,-pyramid1}
 commands = coverage run -m pytest
 
 [testenv:clean]
