--- a/tox.ini
+++ b/tox.ini
@@ -2,20 +2,20 @@
 minversion = 4
 isolated_build = True
 envlist =
-    py{37,38,39,310,311}
+    py{38,39,310,311,312}
     py39-pyramid1
-    pypy3
+    pypy310
     clean,cover
     lint
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
-    pypy-3: pypy3
+    3.12: py312
+    pypy-3.10: pypy310
 
 [testenv]
 deps =
@@ -23,8 +23,8 @@ deps =
     coverage[toml]
     pyramid1: pyramid==1.*
 depends =
-    py{,36,37,38,39,310,311,py3}: clean
-    cover: py{,36,37,38,39,310,311,py3}{,-pyramid1}
+    py{38,39,310,311,312,py310}: clean
+    cover: py{38,39,310,311,312,py310}{,-pyramid1}
 commands = coverage run -m pytest
 
 [testenv:clean]
